# raredex-cli

./: LICENSE  README.md  pyproject.toml
raredex_cli/: __init__.py  main.py
tests/: test_add_guardian.py
