[tool.poetry]
name = "Raredex-cli"
version = "0.1.3"
description = "CLI for interacting with Raredex API and Paraclear smart contracts"
authors = ["Raredex Team <support@raredex.trade>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = {extras = ["all"], version = "^0.15.2"}
paradex_py = "^0.4.4"
rich = "^14.0.0"

[tool.poetry.scripts]
paradex-cli = "raredex_cli.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
